# ITOG_LR

./: .gitignore  CMakeLists.txt  LR_itog.docx  README.md
data/: invalid_broken_json.json  invalid_missing_text.json  invalid_wrong_type.json  paragraphs_array.json  sample_text.json  stopwords.json
docs/: Implementation_Plan.md  bench.md  example_output.txt  report.md  tests_log.md
include/: cli.hpp  json_parser.hpp  text_analyzer.hpp
scripts/: generate_json.py
src/: cli.cpp  json_parser.cpp  main.cpp  text_analyzer.cpp
tests/: tests_main.cpp
